# lsCOMP

./: CMakeLists.txt  LICENSE  README.md
example/: CMakeLists.txt  lsCOMP_uint16.cpp  lsCOMP_uint32.cpp
include/: lsCOMP_entry.h  lsCOMP_kernel.h  lsCOMP_timer.h  lsCOMP_utility.h
src/: lsCOMP_entry.cu  lsCOMP_kernel.cu  lsCOMP_timer.cu  lsCOMP_utility.cu
